--- a/views/403.ejs
+++ b/views/403.ejs
@@ -46,7 +46,7 @@
 
     <div class="page">
       <div class="ocean">
-        <img class="fishy" src="http://sailsjs.com/images/image_devInTub.png">
+        <img class="fishy" src="/images/image_devInTub.png">
       </div>
 
       <div class="main">
@@ -66,8 +66,8 @@
       </div>
 
       <div class="logo">
-        <a href="http://sailsjs.org">
-          <img src="http://sailsjs.org/images/logo.png">
+        <a href="/">
+          <img src="/images/logo.png">
         </a>
       </div>
     </div>
