--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,74 +1,190 @@
-<!-- Default home page -->
-<link type="text/css" href='http://sailsjs.org/styles/fonts.css' rel='stylesheet'/>
-<style>
-    /* Styles included inline since you'll probably be deleting this page anyway */
-    html,body{text-align:left;font-size:1em}html,body,img,form,textarea,input,fieldset,div,p,div,ul,li,ol,dl,dt,dd,h1,h2,h3,h4,h5,h6,pre,code{margin:0;padding:0}ul,li{list-style:none}img{display:block}a img{border:0}a{text-decoration:none;font-weight:normal;font-family:inherit}*:active,*:focus{outline:0;-moz-outline-style:none}h1,h2,h3,h4,h5,h6{font-weight:normal}div.clear{clear:both}.clearfix:after{clear:both;content:".";display:block;font-size:0;height:0;line-height:0;visibility:hidden}body{font-family:"Open Sans",Arial,sans-serif;font-weight:300;}.top-bar {width: 100%; background-color: #e4f0f1; padding: 15px 0;}.top-bar .container img {float: left;}.top-bar .container ul {float: right; padding-top: 25px;}.top-bar .container li {float: left; width: 125px; text-align: center; font-size: 15px; color:#000; font-weight: 600;}.top-bar .container a li:hover {color: #118798; -webkit-transition:color 200ms; -moz-transition:color 200ms; -o-transition:color 200ms;transition:color 200ms;}.container{width: 80%; max-width: 1200px; margin: auto;}div.header {-webkit-transition: 6s; -moz-transition: 6s; -o-transition: 6s;transition: 6s; background: rgba(4, 36, 41, 0.89) url(http://sailsjs.org/images/img_sailsShadow.png) no-repeat 42% bottom; padding: 100px 0 65px;}.header h1#main-title{color: #fff; font-weight: 300; font-size: 2.5em;}.header h3{color: #b1eef7; font-style: italic; font-weight: 300;}.header h3 code{font-style: normal!important; background-color: rgba(255,255,255,0.5); font-weight: 300; color:#0e6471; margin: 0px 5px;}div.main.container{padding: 50px 0;}h1 {color: #118798; font-weight: 300;}code {font-size: inherit; font-family: 'Consolas', 'Monaco', monospace; padding:4px 5px 1px; background-color: #f3f5f7}a{color: #118798; font-weight: 300; text-decoration: underline;}a:hover {color: #0e6471; -webkit-transition:color 200ms; -moz-transition:color 200ms; -o-transition:color 200ms;transition:color 200ms;}p{line-height: 1.5em;}blockquote{background-color: #e4f0f1; padding: 25px; line-height: 1.5em; margin: 15px 0;}blockquote span{font-weight: 600; padding-right: 5px;}ul.getting-started{padding: 25px 75px 25px 0; width: 70%; float: left; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}ul.getting-started li{padding: 25px 0;}ul.getting-started li h3 {padding-bottom: 10px; font-size: 25px; font-weight: 300;}.sprite{background:url(http://sailsjs.org/images/newapp.sprite.png) no-repeat; position: absolute; left: 0; top:0;}.getting-started .sprite{margin-left:10px;padding-left:60px;height:42px;width:0; float: left;}.getting-started .one{background-position:0 0}.getting-started .two{background-position:0 -42px}.getting-started .three{background-position:0 -83px}div.step {position: relative; padding-left: 70px; opacity: 0.9;}div.step:hover{ opacity: 1;}div.links {float: left; width: 30%; max-width: 325px; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; background-color: #f3f5f7; border: 1px solid #ebebeb; padding: 25px 45px 35px;}div.links h3 {color: #727272; text-align: center; font-size: 28px; font-weight: 300;}div.links h4 {color: #727272; font-size: 17px; font-weight: 600; padding: 15px 0 10px;}div.links .link-list a {text-decoration: none; font-weight: 400;}div.links .link-list a li {padding: 0px 0px 5px 10px;}div.default-page{min-width: 1200px;}.pocket{display:none;}
-</style>
-<script type="text/javascript">
-setTimeout(function sunrise () {
-    document.getElementsByClassName('header')[0].style.backgroundColor = '#118798';
-}, 0);
-</script>
+<section id="header">
+  <!-- Nav Start -->
+  <div class="menu">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
 
-<div class="default-page">
-    <div class="header">
-        <h1 id="main-title" class="container"><%= __('A brand new app.') %></h1>
-        <h3 class="container">You're looking at: <code><%= view.pathFromApp + '.' +view.ext %></code></h3>
-    </div>
-    <div class="main container clearfix">
-        <!-- <h1>Getting started</h1>
-        <p>Don't worry, we've got your back.</p> -->
-        <ul class="getting-started">
-            <li class="clearfix">
-                <div class="step">
-                    <div class="sprite one"></div>
-                    <h3>Generate a REST API.</h3>
-                    <p>
-                        Run <code>sails generate api user</code>.  This will create two files: a <a href="http://sailsjs.org/#/documentation/concepts/ORM/Models.html">model</a> <code class="pocket">api/models/User.js</code> and a <a href="http://sailsjs.org/#/documentation/concepts/Controllers">controller</a><code class="pocket">api/controllers/UserController.js</code>.
-                    </p>
-                </div>
-            </li>
-            <li class="clearfix">
-                <div class="step">
-                    <div class="sprite two"></div>
-                    <h3>
-                        Lift your app.
-                    </h3>
-                    <p>
-                        Run <code>sails lift</code> to start up your app server.  If you visit <a target="_blank" href="http://localhost:1337/user"><code>http://localhost:1337/user</code></a> in your browser, you'll see a <a href="http://sailsjs.org/#/documentation/reference/blueprint-api">WebSocket-compatible</a> user API.
-                    </p>
-                </div>
-            </li>
-            <li class="clearfix">
-                <div class="step">
-                    <div class="sprite three"></div>
-                    <h3>
-                        Dive in.
-                    </h3>
-                    <p>Blueprints are just the beginning.  You'll probably also want to learn how to customize your app's <a href="http://sailsjs.org/#/documentation/concepts/Routes">routes</a>, set up <a href="http://sailsjs.org/#/documentation/concepts/Policies">security policies</a>, configure your <a href="http://sailsjs.org/#/documentation/reference/sails.config/sails.config.connections.html">data sources</a>, and build custom <a target="_blank" href="http://sailsjs.org/#/documentation/concepts/Controllers?q=actions">controller actions</a>. For more help getting started, check out the links on this page.</p>
-
-                </div>
-            </li>
-        </ul>
-        <div class="links">
-            <!-- <h3>Links</h3> -->
-            <ul class="link-list">
-
-                <h4>Docs</h4>
-                <a target="_blank" href="http://sailsjs.org/#/documentation/anatomy/myApp"><li>App Structure</li></a>
-                <a target="_blank" href="http://sailsjs.org/#/documentation/reference"><li>Reference</li></a>
-                <a target="_blank" href="http://sailsjs.org/#/documentation/concepts/extending-sails/Adapters/adapterList.html"><li>Supported Databases</li></a>
-
-                <h4>Tutorials</h4>
-                <a target="_blank" href="http://links.sailsjs.org/community/sails101"><li>Sails 101</li></a>
-
-                <h4>Community</h4>
-                <a target="_blank" href="http://stackoverflow.com/search?q=sails.js"><li>StackOverFlow</li></a>
-                <a target="_blank" href="https://github.com/balderdashy/sails"><li>GitHub</li></a>
-                <a target="_blank" href="https://groups.google.com/forum/#!forum/sailsjs"><li>Google Group</li></a>
-                <a target="_blank" href="http://webchat.freenode.net/"><li>IRC (#sailsjs on freenode)</li></a>
-
-            </ul>
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">fello.in</a>
         </div>
+
+        <div class="collapse navbar-collapse" id="navbar">
+          <ul class="nav navbar-nav pull-right">
+            <li class="active"><a href="/">Features</a></li>
+            <li><a href="#pricing.html">Pricing</a></li>
+            <li><a href="#ourstory.html">Our Story</a></li>
+            <li><a href="#suport.html">Support</a></li>
+            <li><a href="#signup.html">Get started</a></li>
+            <li><a href="#login.html">Login</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
+  <!-- Nav End -->
+</section>
+
+
+<!-- Start Billboard Section-->
+<section id="billboard" class="bill-board">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-7 main-text">
+        <h1 class="wow fadeInDown">Chat Face to Face with Customers</h1>
+        <h4 class="wow fadeInDown" data-wow-delay="0.2s">Live Video chat solution for business websites</h4>
+        <div class="home-buttons">
+          <a href="#" class="btn btn-trial-green wow fadeInDown" data-wow-delay="0.4s">Start Free <i class="fa fa-long-arrow-right"></i></a>
+          <span class="sub-btn">
+            <a href="#" class="btn btn-what-is-fello wow fadeInDown" data-wow-delay="0.3s">What is fello ?</a>
+          </span>
+        </div>
+      </div>
+      <div class="col-sm-5 main-video">
+        <img src="/images/backgrounds/bg.png" width="100%">
+      </div>
     </div>
+  </div>
+</section>
+<!-- End  billboard Section-->
+
+
+<!-- Start Services Section -->
+<section id="services" class="services">
+  <div class="container">
+    <div class="row">
+      <div class="header-title text-center">
+        <h2 class="section-title wow fadeInDown">All it takes is 5 Minutes</h2>
+        <p class="section-subtitle wow fadeInDown" data-wow-delay="0.2s">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia <br> deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="col-sm-4 col-md-4">
+        <article class="text-center  wow fadeInLeft" data-wow-delay="0.1s">
+          <i class="fa fa-cogs"></i>
+          <h3>1. Sign Up for Free Trial</h3>
+          <p>Excepteur sint occaecat cupi datat non it proident, sunt in culpa qui officia dese runtorn mollit anim id est laborum.</p>
+        </article>
+      </div>
+      <div class="col-sm-4 col-md-4">
+        <article class="text-center  wow fadeInLeft" data-wow-delay="0.1s">
+          <i class="fa fa-leaf"></i>
+          <h3>2. Embed Code to your Website</h3>
+          <p>Excepteur sint occaecat cupi datat non it proident, sunt in culpa qui officia dese runtorn mollit anim id est laborum.</p>
+        </article>
+      </div>
+      <div class="col-sm-4 col-md-4">
+        <article class="text-center  wow fadeInLeft" data-wow-delay="0.1s">
+          <i class="fa fa-android"></i>
+          <h3>3. Go live with customer</h3>
+          <p>Excepteur sint occaecat cupi datat non it proident, sunt in culpa qui officia dese runtorn mollit anim id est laborum.</p>
+        </article>
+      </div>
+    </div>
+    <hr>
+  </div>
+</section>
+<!-- End Services Section -->
+
+<!-- Start story Section -->
+<section id="story" class="story">
+  <div class="container">
+    <div class="row">
+      <div class="header-title text-center">
+        <h2 class="section-title wow fadeInDown">A brief about us, Our Story</h2>
+        <p class="section-subtitle wow fadeInDown" data-wow-delay="0.2s">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia <br> deserunt mollit anim id est laborum.</p>
+      </div>
+      <div class="text-center  wow bounceIn animated">
+        <a href=""> <img src="images/backgrounds/video.jpg"></a>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End story Section -->
+
+<!-- Start Subscription Section -->
+<section id="subscription" class="subscription text-center">
+  <div class="container">
+    <div class="row">
+      <div class="sub-title">
+        <h2 class="section-title wow fadeInDown">Join Our Subscribers</h2>
+        <p class="section-subtitle wow fadeInDown" data-wow-delay="0.2s">10,000 sint occaecat cupidatat non proident sunt in culpa qui officia.</p>
+      </div>
+      <div class="sub-btn">
+        <a href="#" class="btn btn-defult wow fadeInDown" data-wow-delay="0.3s">Click Here To Subscribe</a>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End Subscription Section -->
+
+<!-- Start contact Section -->
+<div id="contact" class="contact">
+  <div class="container">
+    <div class="row">
+      <div class="social text-center">
+        <ul>
+          <li class="facebook wow bounce" data-wow-delay="0.1s"><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <li class="twitter wow bounce" data-wow-delay="0.3s"><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <li class="dribbble wow bounce" data-wow-delay="0.5s"><a href="#"><i class="fa fa-dribbble"></i></a></li>
+          <li class="google wow bounce" data-wow-delay="0.7s"><a href="#"><i class="fa fa-google-plus"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </div>
+<!-- End contact Section -->
+
+<!-- End contact Section -->
+
+<footer id="footer" class="footer">
+  <div class="container">
+    <div class="row wow fadeInDown">
+      <div class="col-sm-6 col-md-3">
+        <div class="footer-widget">
+          <h4 class="widget-title">Location</h4>
+          <p>24 Hoang Quoc Viet <br> Hanoi, Vietnam <br> <span>(+84) 748-2411</span></p>
+          <a href="#">See it in the map <i class="fa fa-long-arrow-right"></i></a>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <h4 class="widget-title">Company</h4>
+        <ul class="list">
+          <li><a href="#">Our story</a></li>
+          <li><a href="#">Mission</a></li>
+          <li><a href="#">Journal</a></li>
+          <li><a href="#">Careers</a></li>
+        </ul>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <h4 class="widget-title">Support</h4>
+        <ul class="list">
+          <li><a href="#">FAQ</a></li>
+          <li><a href="#">Contact us</a></li>
+          <li><a href="#">Policies</a></li>
+        </ul>
+      </div>
+      <div class="col-sm-6 col-md-3">
+        <h4 class="widget-title">Fello.in</h4>
+        <div class="footer-widget">
+          <p>Do Business Face to Face with Every Client</p>
+          <p>Experience the simplicity of Fello Live Video. Chat in your browser, in your website.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
+<!-- jQuery Load -->
+<script src="/vendor/jquery/jquery.js"></script>
+
+<!-- Bootstrap JS -->
+<script src="/vendor/bootstrap/bootstrap.js"></script>
+
+<!--WOW Scroll Spy-->
+<script src="/vendor/wow.js"></script>
+
+<!-- Main -->
+<script src="/vendor/init.js"></script>
