--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -184,7 +184,7 @@
 <script src="/vendor/bootstrap/bootstrap.js"></script>
 
 <!--WOW Scroll Spy-->
-<script src="/vendor/wow.js"></script>
+<script src="/js/utils/wow.js"></script>
 
 <!-- Main -->
-<script src="/vendor/init.js"></script>
+<script src="/js/utils/init.js"></script>
