--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -36,9 +36,10 @@
   -->
 
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
+
   <!--STYLES-->
   <link rel="stylesheet" href="/vendor/bootstrap/bootstrap.css">
-  <link rel="stylesheet" href="/vendor/font-awesome/font-awesome.css">
   <link rel="stylesheet" href="/styles/common.css">
   <link rel="stylesheet" href="/styles/extra/animate.css">
   <link rel="stylesheet" href="/styles/importer.css">
