--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,6 @@
 
 // STYLES
 link(rel="stylesheet", href="/vendor/bootstrap/bootstrap.css")
-link(rel="stylesheet", href="/vendor/font-awesome/font-awesome.css")
 link(rel="stylesheet", href="/styles/common.css")
 link(rel="stylesheet", href="/styles/extra/animate.css")
 link(rel="stylesheet", href="/styles/importer.css")
@@ -13,15 +12,15 @@ link(rel="stylesheet", href="/styles/responsive.css")
 // SCRIPTS
 script(src="/vendor/angular/angular.js")
 script(src="/vendor/bootstrap/bootstrap.js")
-script(src="/vendor/init.js")
 script(src="/vendor/jquery/jquery.js")
 script(src="/vendor/requirejs/require.js")
-script(src="/vendor/wow.js")
 script(src="/js/dependencies/sails.io.js")
 script(src="/js/app.js")
 script(src="/js/controllers.js")
 script(src="/js/controllers/angUserController.js")
 script(src="/js/main.js")
+script(src="/js/utils/init.js")
+script(src="/js/utils/wow.js")
 // SCRIPTS END
 
 h1 Hello from Jade
