--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -197,7 +197,7 @@
             <div class="col-lg-5 col-xs-6">
               <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                  <h5>Video Chatbox</h5>
+                  <h5><i class="fa fa-globe"></i> Video Chatbox</h5>
                   <div class="ibox-tools">
                     <span class="label label-primary-light">10:13m</span>
                   </div>
@@ -205,7 +205,6 @@
                 <div class="ibox-content">
 
                   <div>
-
                     Connecting video call to your customer ....
                   </div>
 
@@ -216,15 +215,12 @@
             <div class="col-lg-3 col-xs-6">
               <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                  <h5>Your Video</h5>
-                  <div class="ibox-tools">
-                    <span class="label label-primary-light">10:13m</span>
-                  </div>
+                  <h5><i class="fa fa-headphones"></i> Your Preview</h5>
                 </div>
                 <div class="ibox-content">
 
                   <div>
-                    Setting your video call ...
+                    initializing...
                   </div>
 
                 </div>
@@ -234,7 +230,7 @@
             <div class="col-lg-4">
               <div class="ibox float-e-margins no-drop">
                 <div class="ibox-title">
-                  <h5>Waiting Room</h5>
+                  <h5><i class="fa fa-slideshare"></i> Waiting Room</h5>
                   <div class="ibox-tools">
                     <span class="label label-warning-light">10 Waiting </span>
                     <a class="collapse-link">
