--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -59,7 +59,7 @@
     <div class="row">
       <div class="header-title text-center">
         <h2 class="section-title wow fadeInDown">All it takes is 5 Minutes</h2>
-        <p class="section-subtitle wow fadeInDown" data-wow-delay="0.2s">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia <br> deserunt mollit anim id est laborum.</p>
+        <p class="section-subtitle wow fadeInDown" data-wow-delay="0.2s">simple and easy. fello will help you connect to your customers <br /> installation and set up just short in 5 minutes</p>
       </div>
       <div class="col-sm-4 col-md-4">
         <article class="text-center  wow fadeInLeft" data-wow-delay="0.1s">
