add livingroom page

--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -198,7 +198,7 @@
               <div class="ibox float-e-margins">
                 <div class="ibox-title">
                   <h5><i class="fa fa-globe"></i> Video Chatbox</h5>
-                  <div class="ibox-tools">
+                  <div class="ibox-tools hidden-xs">
                     <span class="label label-primary-light">10:13m</span>
                   </div>
                 </div>
