--- a/views/livingroom/layout.ejs
+++ b/views/livingroom/layout.ejs
@@ -23,6 +23,8 @@
   <!--<link rel="stylesheet" href="/dashboard/plugins/morris/morris-0.4.3.min.css">-->
   <link rel="stylesheet" href="/css/dashboard/dashboard.css">
   <link rel="stylesheet" href="/css/dashboard/custom.css">
+  <link rel="stylesheet" href="/css/livingroom/livingroom.css">
+  <link rel="stylesheet" href="/css/livingroom/chatbox.css">
 </head>
 
 <body class="mini-navbar">
