--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -1,10 +1,10 @@
-<div id="wrapper">
+<div id="wrapper" ng-app="fello.dashboard">
   <nav class="navbar-default navbar-static-side" role="navigation">
     <div class="sidebar-collapse">
       <ul class="nav" id="side-menu">
         <li class="nav-header">
           <div class="dropdown profile-element"> <span>
-                            <img alt="image" class="img-circle" src="img/profile_small.jpg" />
+                            <img alt="image" class="img-circle" src="/img/profile_small.jpg" />
                              </span>
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">Amelia Smith</strong>
@@ -23,14 +23,14 @@
 
         </li>
         <li>
-          <a href="index.html"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboards</span> <span class="fa arrow"></span></a>
+          <a href="index.html"><i class="fa fa-th-large"></i> <span class="nav-label">Rooms</span> <span class="fa arrow"></span></a>
           <ul class="nav nav-second-level">
-            <li class="active"><a href="index.html">Overview</a></li>
-            <li ><a href="dashboard_2.html">User Online</a></li>
+            <li class="active"><a href="index.html">All Rooms</a></li>
+            <li ><a href="dashboard_2.html">Add New</a></li>
           </ul>
         </li>
         <li class="active">
-          <a href="#live.html"><i class="fa fa-video-camera"></i> <span class="nav-label">Live </span><span class="label label-error pull-right">2/8</span></a>
+          <a ui-sref="live"><i class="fa fa-video-camera"></i> <span class="nav-label">Live </span><span class="label label-error pull-right">2/8</span></a>
         </li>
         <li>
           <a href="mailbox.html"><i class="fa fa-wechat"></i> <span class="nav-label">Chatbox </span><span class="label label-warning pull-right">16/24</span></a>
@@ -92,7 +92,7 @@
               <li>
                 <div class="dropdown-messages-box">
                   <a href="profile.html" class="pull-left">
-                    <img alt="image" class="img-circle" src="img/a7.jpg">
+                    <img alt="image" class="img-circle" src="/img/a7.jpg">
                   </a>
                   <div class="media-body">
                     <small class="pull-right">46h ago</small>
@@ -105,7 +105,7 @@
               <li>
                 <div class="dropdown-messages-box">
                   <a href="profile.html" class="pull-left">
-                    <img alt="image" class="img-circle" src="img/a4.jpg">
+                    <img alt="image" class="img-circle" src="/img/a4.jpg">
                   </a>
                   <div class="media-body ">
                     <small class="pull-right text-navy">5h ago</small>
@@ -118,7 +118,7 @@
               <li>
                 <div class="dropdown-messages-box">
                   <a href="profile.html" class="pull-left">
-                    <img alt="image" class="img-circle" src="img/profile.jpg">
+                    <img alt="image" class="img-circle" src="/img/profile.jpg">
                   </a>
                   <div class="media-body ">
                     <small class="pull-right">23h ago</small>
@@ -193,127 +193,13 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="wrapper wrapper-content">
-          <div class="row">
-            <div class="col-lg-5 col-xs-6">
-              <div class="ibox float-e-margins">
-                <div class="ibox-title">
-                  <h5><i class="fa fa-globe"></i> Video Chatbox</h5>
-                  <div class="ibox-tools hidden-xs">
-                    <span class="label label-primary-light">10:13m</span>
-                  </div>
-                </div>
-                <div class="ibox-content">
 
-                  <div>
-                    Connecting video call to your customer ....
-                  </div>
+          <div ui-view></div>
 
-                </div>
-              </div>
-
-            </div>
-            <div class="col-lg-3 col-xs-6">
-              <div class="ibox float-e-margins">
-                <div class="ibox-title">
-                  <h5><i class="fa fa-headphones"></i> Your Preview</h5>
-                </div>
-                <div class="ibox-content">
-
-                  <div>
-                    initializing...
-                  </div>
-
-                </div>
-              </div>
-
-            </div>
-            <div class="col-lg-4">
-              <div class="ibox float-e-margins no-drop">
-                <div class="ibox-title">
-                  <h5><i class="fa fa-slideshare"></i> Waiting Room</h5>
-                  <div class="ibox-tools">
-                    <span class="label label-warning-light">10 Waiting </span>
-                    <a class="collapse-link">
-                      <i class="fa fa-chevron-up"></i>
-                    </a>
-                    <a class="close-link">
-                      <i class="fa fa-times"></i>
-                    </a>
-                  </div>
-                </div>
-                <div class="ibox-content ibox-heading">
-                  <h3>You have new chat today!</h3>
-                  <small><i class="fa fa-map-marker"></i> Oldest is on 6:00am. Check your chatbox to see detail.</small>
-                </div>
-                <div class="ibox-content inspinia-timeline">
-
-                    <div class="feed-activity-list">
-
-                      <div class="feed-element">
-                        <a href="profile.html" class="pull-left">
-                          <img alt="image" class="img-circle" src="img/profile.jpg">
-                        </a>
-                        <div class="media-body ">
-                          <small class="pull-right">2m ago</small>
-                          <strong>Monica Smith</strong> joined.<br>
-                          <small class="text-muted">Today 5:60 pm - 12.06.2014</small>
-                          <div class="actions">
-                            <a class="btn btn-xs btn-success"><i class="fa fa-phone accept"></i> Accept </a>
-                            <a class="btn btn-xs btn-primary"><i class="fa fa-wechat chat"></i> Chat</a>
-                            <a class="btn btn-xs btn-danger"><i class="fa fa-minus-circle deny"></i> Deny</a>
-                          </div>
-                          <div class="well">
-                            Hello bussiness ! <br/> Could i ask you a question ? <br/>
-                            About the camera i wanted to buy.
-                          </div>
-
-
-                        </div>
-                      </div>
-
-                      <div class="feed-element">
-                        <a href="profile.html" class="pull-left">
-                          <img alt="image" class="img-circle" src="img/a2.jpg">
-                        </a>
-                        <div class="media-body ">
-                          <small class="pull-right">5m ago</small>
-                          <strong>Mark Johnson</strong> joined. <br>
-                          <small class="text-muted">Today 2:10 pm - 12.06.2014</small>
-                          <div class="actions">
-                            <a class="btn btn-xs btn-success"><i class="fa fa-phone accept"></i> Accept </a>
-                            <a class="btn btn-xs btn-primary"><i class="fa fa-wechat chat"></i> Chat</a>
-                            <a class="btn btn-xs btn-danger"><i class="fa fa-minus-circle deny"></i> Deny</a>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="feed-element">
-                        <a href="profile.html" class="pull-left">
-                          <img alt="image" class="img-circle" src="img/a3.jpg">
-                        </a>
-                        <div class="media-body ">
-                          <small class="pull-right">10m ago</small>
-                          <strong>Janet Rosowski</strong> joined. <br>
-                          <small class="text-muted">2 days ago at 8:30am</small>
-                          <div class="actions">
-                            <a class="btn btn-xs btn-success"><i class="fa fa-phone accept"></i> Accept </a>
-                            <a class="btn btn-xs btn-primary"><i class="fa fa-wechat chat"></i> Chat</a>
-                            <a class="btn btn-xs btn-danger"><i class="fa fa-minus-circle deny"></i> Deny</a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-
-                  <button class="btn btn-white btn-block m-t"><i class="fa fa-arrow-down"></i> Show More</button>
-
-                </div>
-              </div>
-            </div>
-
-          </div>
         </div>
         <div class="footer">
           <div class="pull-right">
-            10GB of <strong>250GB</strong> Free.
+            Free account type. <strong>Upgrade Now!</strong>
           </div>
           <div>
             <strong>Copyright</strong> fello.in &copy; 2014-2015
@@ -326,14 +212,23 @@
 </div>
 
 <!-- Mainly scripts -->
-<script src="/js/dashboard/jquery-1.10.2.js"></script>
-<script src="/js/dashboard/bootstrap.min.js"></script>
-<script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-<script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+<script type="text/javascript" src="/js/dashboard/jquery-1.10.2.js"></script>
+<script type="text/javascript" src="/js/dashboard/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+<script type="text/javascript" src="/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+<script type="text/javascript" src="/js/plugins/pace/pace.min.js"></script>
 
 <!-- Custom and plugin javascript -->
-<script src="/js/dashboard//inspinia.js"></script>
-<script src="/js/dashboard//plugins/pace/pace.min.js"></script>
+<script type="text/javascript" src="/js/dashboard/inspinia.js"></script>
+
+<!-- Fello script main -->
+<script type="text/javascript" src="/easyrtc/easyrtc.js"></script>
+<script type="text/javascript" src="/vendor/angular/angular.js"></script>
+<script type="text/javascript" src="/vendor/angular-ui-router/angular-ui-router.js"></script>
+
+<!-- Fello script main -->
+<script type="text/javascript" src="/js/dashboard/app.js"></script>
+<script type="text/javascript" src="/js/dashboard/controllers/LiveController.js"></script>
 
 <script>
   // Dragable panels
