--- a/views/livingroom/index.ejs
+++ b/views/livingroom/index.ejs
@@ -1,7 +1,10 @@
-<nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
+<nav class="navbar navbar-static-top animated" role="navigation" style="margin-bottom: 0">
   <div class="navbar-header">
-    <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-info-circle fa-2x"></i> </a>
-    <span class="m-r-sm text-muted welcome-message minimalize-styl-2">You are in Candy Store Support Room.<br/>Permalink: <a href="http://fello.in/candy-store">fello.in/candy-store</a></span>
+    <a class="navbar-minimalize minimalize-styl-2 btn btn-primary no-hide" href="#"><i
+        class="fa fa-info-circle fa-2x"></i>
+    </a>
+    <span class="m-r-sm text-muted welcome-message minimalize-styl-2">You are in Candy Store Support Room.<br/>Permalink: <a
+        href="http://fello.in/candy-store">fello.in/candy-store</a></span>
     <span class="minimalize-styl-2">Hơ qua thì xuất header-toolbar, info icon luôn xuất hiện.</span>
   </div>
   <ul class="nav navbar-top-links navbar-right">
@@ -10,60 +13,7 @@
     </li>
     <li class="dropdown">
       <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-        <i class="fa fa-envelope"></i>  <span class="label label-warning">16</span>
-      </a>
-      <ul class="dropdown-menu dropdown-messages">
-        <li>
-          <div class="dropdown-messages-box">
-            <a href="profile.html" class="pull-left">
-              <img alt="image" class="img-circle" src="img/a7.jpg">
-            </a>
-            <div class="media-body">
-              <small class="pull-right">46h ago</small>
-              <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>. <br>
-              <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
-            </div>
-          </div>
-        </li>
-        <li class="divider"></li>
-        <li>
-          <div class="dropdown-messages-box">
-            <a href="profile.html" class="pull-left">
-              <img alt="image" class="img-circle" src="img/a4.jpg">
-            </a>
-            <div class="media-body ">
-              <small class="pull-right text-navy">5h ago</small>
-              <strong>Chris Johnatan Overtunk</strong> started following <strong>Monica Smith</strong>. <br>
-              <small class="text-muted">Yesterday 1:21 pm - 11.06.2014</small>
-            </div>
-          </div>
-        </li>
-        <li class="divider"></li>
-        <li>
-          <div class="dropdown-messages-box">
-            <a href="profile.html" class="pull-left">
-              <img alt="image" class="img-circle" src="img/profile.jpg">
-            </a>
-            <div class="media-body ">
-              <small class="pull-right">23h ago</small>
-              <strong>Monica Smith</strong> love <strong>Kim Smith</strong>. <br>
-              <small class="text-muted">2 days ago at 2:30 am - 11.06.2014</small>
-            </div>
-          </div>
-        </li>
-        <li class="divider"></li>
-        <li>
-          <div class="text-center link-block">
-            <a href="mailbox.html">
-              <i class="fa fa-envelope"></i> <strong>Read All Messages</strong>
-            </a>
-          </div>
-        </li>
-      </ul>
-    </li>
-    <li class="dropdown">
-      <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-        <i class="fa fa-bell"></i>  <span class="label label-primary">8</span>
+        <i class="fa fa-bell"></i> <span class="label label-primary">8</span>
       </a>
       <ul class="dropdown-menu dropdown-alerts">
         <li>
@@ -115,108 +65,119 @@
 
 <div class="wrapper wrapper-content animated fadeInRight">
 
-<div class="row">
-  <div class="col-xs-offset-1 col-xs-5">
-    <div class="ibox float-e-margins">
-      <div class="ibox-title">
-        <h5><i class="fa fa-headphones"></i> Your Preview</h5>
-        <div class="ibox-tools hidden-xs">
-          <span class="label label-primary-light">10:13m</span>
-        </div>
-      </div>
-      <div class="ibox-content">
+  <div class="row">
+    <div class="col-xs-offset-1 col-xs-5">
+      <div class="ibox float-e-margins">
+        <div class="ibox-title">
+          <h5><i class="fa fa-headphones"></i> Your Preview</h5>
 
-        <div>
-          initializing...
-        </div>
-
-      </div>
-    </div>
-
-  </div>
-  <div class="col-xs-5">
-    <div class="ibox float-e-margins">
-      <div class="ibox-title">
-        <h5><i class="fa fa-headphones"></i> Supporter</h5>
-      </div>
-      <div class="ibox-content">
-
-        <div>
-          initializing...
-        </div>
-
-      </div>
-    </div>
-
-  </div>
-</div>
-
-
-<div class="row m-t-lg">
-  <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-    <div class="ibox float-e-margins">
-
-      <div class="ibox-content">
-
-        <div>
-          <div class="chat-activity-list">
-
-            <div class="chat-element">
-              <a href="#" class="pull-left">
-                <img alt="image" class="img-circle" src="img/a2.jpg">
-              </a>
-              <div class="media-body ">
-                <small class="pull-right text-navy">1m ago</small>
-                <strong>Mike Smith</strong>
-                <p class="m-b-xs">
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                </p>
-                <small class="text-muted">Today 4:21 pm - 12.06.2014</small>
-              </div>
-            </div>
-
-            <div class="chat-element right">
-              <a href="#" class="pull-right">
-                <img alt="image" class="img-circle" src="img/a4.jpg">
-              </a>
-              <div class="media-body text-right ">
-                <small class="pull-left">5m ago</small>
-                <strong>John Smith</strong>
-                <p class="m-b-xs">
-                  Lorem Ipsum is simply dummy text of the printing.
-                </p>
-                <small class="text-muted">Today 4:21 pm - 12.06.2014</small>
-              </div>
-            </div>
-
-            <div class="chat-element ">
-              <a href="#" class="pull-left">
-                <img alt="image" class="img-circle" src="img/a2.jpg">
-              </a>
-              <div class="media-body ">
-                <small class="pull-right">2h ago</small>
-                <strong>Mike Smith</strong>
-                <p class="m-b-xs">
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                </p>
-                <small class="text-muted">Today 4:21 pm - 12.06.2014</small>
-              </div>
-            </div>
+          <div class="ibox-tools hidden-xs">
+            <span class="label label-primary-light">10:13m</span>
           </div>
         </div>
-        <div class="chat-form">
-          <form role="form">
-            <div class="form-group">
-              <textarea class="form-control" placeholder="Message"></textarea>
-            </div>
-            <div class="text-right">
-              <button type="submit" class="btn btn-sm btn-primary m-t-n-xs"><strong>Send message</strong></button>
-            </div>
-          </form>
+        <div class="ibox-content">
+
+          <div>
+            initializing...
+            <video id="self" width="300" height="200" muted="muted"></video>
+
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+    <div class="col-xs-5">
+      <div class="ibox float-e-margins">
+        <div class="ibox-title">
+          <h5><i class="fa fa-headphones"></i> Supporter</h5>
+        </div>
+        <div class="ibox-content">
+
+          <div>
+            initializing...
+            <video id="caller" width="300" height="200"></video>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</div>
+<div class="wrapper wrapper-chatbox">
+  <div>
+    <div class="chat-activity-list">
+
+      <div class="chat-element">
+        <a href="#" class="pull-left">
+          <img alt="image" class="img-circle" src="img/a2.jpg">
+        </a>
+
+        <div class="media-body ">
+          <small class="pull-right text-navy">1m ago</small>
+          <strong>Mike Smith</strong>
+
+          <p class="m-b-xs">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+          </p>
+          <small class="text-muted">Today 4:21 pm - 12.06.2014</small>
+        </div>
+      </div>
+
+      <div class="chat-element right">
+        <a href="#" class="pull-right">
+          <img alt="image" class="img-circle" src="img/a4.jpg">
+        </a>
+
+        <div class="media-body text-right ">
+          <small class="pull-left">5m ago</small>
+          <strong>John Smith</strong>
+
+          <p class="m-b-xs">
+            Lorem Ipsum is simply dummy text of the printing.
+          </p>
+          <small class="text-muted">Today 4:21 pm - 12.06.2014</small>
+        </div>
+      </div>
+
+      <div class="chat-element ">
+        <a href="#" class="pull-left">
+          <img alt="image" class="img-circle" src="img/a2.jpg">
+        </a>
+
+        <div class="media-body ">
+          <small class="pull-right">2h ago</small>
+          <strong>Mike Smith</strong>
+
+          <p class="m-b-xs">
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+          </p>
+          <small class="text-muted">Today 4:21 pm - 12.06.2014</small>
         </div>
       </div>
     </div>
   </div>
+
+  <div class="chat-form">
+    <form role="form">
+      <div class="form-group">
+        <textarea class="form-control" placeholder="Message"></textarea>
+      </div>
+      <div class="text-right">
+        <button type="submit" class="btn btn-sm btn-primary m-t-n-xs"><strong>Send message</strong></button>
+      </div>
+    </form>
+  </div>
 </div>
 
-</div>
+<!-- jQuery Load -->
+<script src="/vendor/jquery/jquery.js"></script>
+
+<!-- Bootstrap JS -->
+<script src="/vendor/bootstrap/bootstrap.js"></script>
+<script src="/vendor/bootstrap/"></script>
+
+<!-- Main -->
+<script src="/js/livingroom/app.js"></script>
