--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -212,8 +212,8 @@
 </div>
 
 <!-- Mainly scripts -->
-<script type="text/javascript" src="/js/dashboard/jquery-1.10.2.js"></script>
-<script type="text/javascript" src="/js/dashboard/bootstrap.min.js"></script>
+<script type="text/javascript" src="/vendor/jquery/jquery.js"></script>
+<script type="text/javascript" src="/vendor/bootstrap/bootstrap.js"></script>
 <script type="text/javascript" src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
 <script type="text/javascript" src="/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
 <script type="text/javascript" src="/js/plugins/pace/pace.min.js"></script>
@@ -228,6 +228,7 @@
 
 <!-- Fello script main -->
 <script type="text/javascript" src="/js/dashboard/app.js"></script>
+<script type="text/javascript" src="/js/dashboard/services/CallService.js"></script>
 <script type="text/javascript" src="/js/dashboard/controllers/LiveController.js"></script>
 
 <script>
