--- a/views/dashboard/layout.ejs
+++ b/views/dashboard/layout.ejs
@@ -22,6 +22,7 @@
   <link rel="stylesheet" href="/css/dashboard/bootstrap.min.css">
   <!--<link rel="stylesheet" href="/dashboard/plugins/morris/morris-0.4.3.min.css">-->
   <link rel="stylesheet" href="/css/dashboard/dashboard.css">
+  <link rel="stylesheet" href="/css/dashboard/sticky.css">
   <link rel="stylesheet" href="/css/dashboard/custom.css">
   <!-- This is needed because Facebook login redirects add #_=_ at the end of the URL-->
   <script type="text/javascript">
@@ -34,7 +35,7 @@
 
 <body class="mini-navbar">
 <%- body %>
-<!--<script src="/vendor/requirejs/require.js" data-main="/js/main"></script>-->
+<!--<script src="/vendor/requirejs/require.js" data-main="/js/dashboard/main"></script>-->
 
 </body>
 </html>
