--- a/assets/templates/dashboard/live.html
+++ b/assets/templates/dashboard/live.html
@@ -7,7 +7,7 @@
       <div class="ibox-content">
 
         <div>
-          initializing...
+          <video id="self" width="300" height="200" muted="muted"></video>
         </div>
 
       </div>
@@ -25,7 +25,11 @@
       <div class="ibox-content">
 
         <div>
-          Connecting video call to your customer ....
+          <p ng-show="!ismeeting">Connecting video call to your client  ...</p>
+          <video id="caller" width="300" height="200"></video>
+          <div id="otherClients">
+
+          </div>
         </div>
 
       </div>
@@ -48,13 +52,13 @@
       </div>
       <div class="ibox-content ibox-heading">
         <h3>You have new chat today!</h3>
-        <small><i class="fa fa-map-marker"></i> Oldest is on 6:00am. Check your chatbox to see detail.</small>
+        <small><i class="fa fa-map-marker"></i> My easyrtcid: {{me.easyRtcId}}</small>
       </div>
       <div class="ibox-content inspinia-timeline">
 
           <div class="feed-activity-list">
 
-            <div class="feed-element" ng-repeat="client in waitingClients">
+            <div class="feed-element" ng-repeat="(id, client) in waitingClients">
               <a href="profile.html" class="pull-left">
                 <img alt="image" class="img-circle" src="/img/profile.jpg">
               </a>
@@ -67,7 +71,7 @@
                   <a class="btn btn-xs btn-primary" ng-click="chat(client.callId)"><i class="fa fa-wechat chat"></i> Chat</a>
                   <a class="btn btn-xs btn-danger" ng-click="deny(client.callId)"><i class="fa fa-minus-circle deny"></i> Deny</a>
                 </div>
-                <div class="well">
+                <div class="well" ng-show="client.messages && client.messages.length > 0">
                   <span ng-repeat="message in (client && client.messages)">
                     {{message.message}}<br/>
                   </span>
