--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -223,6 +223,7 @@
 
 <!-- Fello script main -->
 <script type="text/javascript" src="/easyrtc/easyrtc.js"></script>
+<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="/vendor/angular/angular.js"></script>
 <script type="text/javascript" src="/vendor/angular-ui-router/angular-ui-router.js"></script>
 
