--- a/assets/templates/dashboard/live.html
+++ b/assets/templates/dashboard/live.html
@@ -41,7 +41,7 @@
       <div class="ibox-title">
         <h5><i class="fa fa-slideshare"></i> Waiting Room</h5>
         <div class="ibox-tools">
-          <span class="label label-warning-light">10 Waiting </span>
+          <span class="label label-warning-light">{{waitingCount}} Waiting </span>
           <a class="collapse-link">
             <i class="fa fa-chevron-up"></i>
           </a>
@@ -51,8 +51,11 @@
         </div>
       </div>
       <div class="ibox-content ibox-heading">
-        <h3>You have new chat today!</h3>
-        <small><i class="fa fa-map-marker"></i> My easyrtcid: {{me.easyRtcId}}</small>
+        <h3>You have {{waitingCount}} people in waiting list</h3>
+        <div class="animate-switch-container" ng-switch on="me.inconversation">
+          <small class="animate-switch" ng-switch-when="true"><i class="fa fa-map-marker"></i> Your dialogist: {{me.dialogist.clientName}}, processing: {{processingCount}}</small>
+          <small class="animate-switch" ng-switch-default><i class="fa fa-map-marker"></i> Your session ID: {{me.easyrtcid}}</small>
+        </div>
       </div>
       <div class="ibox-content inspinia-timeline">
 
@@ -63,7 +66,7 @@
                 <img alt="image" class="img-circle" src="/img/profile.jpg">
               </a>
               <div class="media-body ">
-                <small class="pull-right">2m ago</small>
+                <small class="pull-right"><span timeago="{{client.roomJoinTime}}"></span></small>
                 <strong>{{client.name}}</strong> joined.<br>
                 <small class="text-muted">Email: {{client.email}}</small>
                 <div class="actions">
@@ -71,7 +74,7 @@
                   <a class="btn btn-xs btn-primary" ng-click="chat(client.callId)"><i class="fa fa-wechat chat"></i> Chat</a>
                   <a class="btn btn-xs btn-danger" ng-click="deny(client.callId)"><i class="fa fa-minus-circle deny"></i> Deny</a>
                 </div>
-                <div class="well" ng-show="client.messages && client.messages.length > 0">
+                <div class="well animate-if" ng-if="client.messages && client.messages.length > 0">
                   <span ng-repeat="message in (client && client.messages)">
                     {{message.message}}<br/>
                   </span>
