--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -226,10 +226,14 @@
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="/vendor/angular/angular.js"></script>
 <script type="text/javascript" src="/vendor/angular-ui-router/angular-ui-router.js"></script>
+<script type="text/javascript" src="/vendor/ng-elif/elif.js"></script>
 
 <!-- Fello script main -->
 <script type="text/javascript" src="/js/dashboard/app.js"></script>
+<script type="text/javascript" src="/js/dashboard/filters/TimeAgoFilter.js"></script>
+<!--<script type="text/javascript" src="/js/dashboard/filters/numberFixedLenFilter.js"></script>-->
 <script type="text/javascript" src="/js/dashboard/services/CallService.js"></script>
+<script type="text/javascript" src="/js/dashboard/directives/TimeAgoDirective.js"></script>
 <script type="text/javascript" src="/js/dashboard/controllers/LiveController.js"></script>
 
 <script>
