--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -211,30 +211,27 @@
   </div>
 </div>
 
-<!-- Mainly scripts -->
-<script type="text/javascript" src="/vendor/jquery/jquery.js"></script>
-<script type="text/javascript" src="/vendor/bootstrap/bootstrap.js"></script>
-<script type="text/javascript" src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
-<script type="text/javascript" src="/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
-<script type="text/javascript" src="/js/plugins/pace/pace.min.js"></script>
-
-<!-- Custom and plugin javascript -->
-<script type="text/javascript" src="/js/dashboard/inspinia.js"></script>
-
-<!-- Fello script main -->
 <script type="text/javascript" src="/easyrtc/easyrtc.js"></script>
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-<script type="text/javascript" src="/vendor/angular/angular.js"></script>
-<script type="text/javascript" src="/vendor/angular-ui-router/angular-ui-router.js"></script>
-<script type="text/javascript" src="/vendor/ng-elif/elif.js"></script>
 
-<!-- Fello script main -->
-<script type="text/javascript" src="/js/dashboard/app.js"></script>
-<script type="text/javascript" src="/js/dashboard/filters/TimeAgoFilter.js"></script>
-<!--<script type="text/javascript" src="/js/dashboard/filters/numberFixedLenFilter.js"></script>-->
-<script type="text/javascript" src="/js/dashboard/services/CallService.js"></script>
-<script type="text/javascript" src="/js/dashboard/directives/TimeAgoDirective.js"></script>
-<script type="text/javascript" src="/js/dashboard/controllers/LiveController.js"></script>
+<!--DASHBOARD SCRIPTS-->
+<script src="/vendor/jquery/jquery.js"></script>
+<script src="/vendor/bootstrap/bootstrap.js"></script>
+<script src="/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+<script src="/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+<script src="/js/plugins/pace/pace.min.js"></script>
+<script src="/js/dashboard/inspinia.js"></script>
+<script src="/vendor/angular/angular.js"></script>
+<script src="/vendor/angular-ui-router/angular-ui-router.js"></script>
+<script src="/vendor/ng-elif/elif.js"></script>
+<script src="/js/common/app.js"></script>
+<script src="/js/common/services/rtcapi.js"></script>
+<script src="/js/dashboard/app.js"></script>
+<script src="/js/dashboard/filters/TimeAgoFilter.js"></script>
+<script src="/js/dashboard/services/CallService.js"></script>
+<script src="/js/dashboard/directives/TimeAgoDirective.js"></script>
+<script src="/js/dashboard/controllers/LiveController.js"></script>
+<!--DASHBOARD SCRIPTS END-->
 
 <script>
   // Dragable panels
