--- a/views/clientroom/layout.ejs
+++ b/views/clientroom/layout.ejs
@@ -14,8 +14,8 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
 
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
+  <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="/styles/common.css">
   <link rel="stylesheet" href="/styles/extra/animate.css">
 
@@ -23,8 +23,8 @@
   <!--<link rel="stylesheet" href="/dashboard/plugins/morris/morris-0.4.3.min.css">-->
   <link rel="stylesheet" href="/css/dashboard/dashboard.css">
   <link rel="stylesheet" href="/css/dashboard/custom.css">
-  <link rel="stylesheet" href="/css/livingroom/livingroom.css">
-  <link rel="stylesheet" href="/css/livingroom/chatbox.css">
+  <link rel="stylesheet" href="/css/clientroom/livingroom.css">
+  <link rel="stylesheet" href="/css/clientroom/chatbox.css">
   <!-- This is needed because Facebook login redirects add #_=_ at the end of the URL-->
   <script type="text/javascript">
     if (window.location.href.indexOf('#_=_') > 0) {
