--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -20,7 +20,7 @@
             <li><a href="#ourstory.html">Our Story</a></li>
             <li><a href="#suport.html">Support</a></li>
             <li><a href="#signup.html">Get started</a></li>
-            <li><a href="#login.html">Login</a></li>
+            <li><a href="/dashboard">Login</a></li>
           </ul>
         </div>
       </div>
