--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,7 +35,7 @@
           + Use a different or additional preprocessor, like SASS, SCSS or Stylus
   -->
 
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 
   <!--STYLES-->
