--- a/views/dashboard/index.ejs
+++ b/views/dashboard/index.ejs
@@ -223,9 +223,18 @@
 <script src="/js/dashboard/inspinia.js"></script>
 <script src="/vendor/angular/angular.js"></script>
 <script src="/vendor/angular-ui-router/angular-ui-router.js"></script>
+<script src="/vendor/angular-sanitize/angular-sanitize.js"></script>
+<script src="/vendor/angular-cookies/angular-cookies.js"></script>
+<script src="/vendor/angular-bind-html-compile/angular-bind-html-compile.js"></script>
 <script src="/vendor/ng-elif/elif.js"></script>
 <script src="/js/common/app.js"></script>
 <script src="/js/common/services/rtcapi.js"></script>
+<script src="/js/common/services/lodash.js"></script>
+<script src="/js/common/services/guid.js"></script>
+<script src="/js/common/services/utils.js"></script>
+<script src="/js/common/services/memo.js"></script>
+<script src="/js/common/services/soundEffectManager.js"></script>
+<script src="/js/common/services/sounds.js"></script>
 <script src="/js/dashboard/app.js"></script>
 <script src="/js/dashboard/filters/TimeAgoFilter.js"></script>
 <script src="/js/dashboard/services/CallService.js"></script>
