--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -40,6 +40,7 @@
 
   <!--STYLES-->
   <link rel="stylesheet" href="/vendor/bootstrap/bootstrap.css">
+  <link rel="stylesheet" href="/vendor/jquery-impromptu/jquery-impromptu.css">
   <link rel="stylesheet" href="/styles/common.css">
   <link rel="stylesheet" href="/styles/extra/animate.css">
   <link rel="stylesheet" href="/styles/homepage.css">
