--- a/assets/css/clientroom/chatbox.css
+++ b/assets/css/clientroom/chatbox.css
@@ -1,3 +1,7 @@
+body {
+  font-size: 14px;
+}
+
 .wrapper-chatbox {
   background: white;
   margin: 0 auto;
@@ -180,7 +184,7 @@
 }
 
 .chat-wrapper .chat form.message-input-wrapper {
-  width: 100%;
+  /*width: 100%;*/
   min-height: 42px;
   background-color: #fff;
   padding: 0 42px;
