--- a/assets/css/clientroom/livingroom.css
+++ b/assets/css/clientroom/livingroom.css
@@ -8,3 +8,88 @@
 .navbar:hover {
   opacity: 1;
 }
+
+body {
+  font-family: "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background-color: #2f4050;
+  font-size: 14px;
+  color: #676a6c;
+  overflow-x: hidden;
+}
+
+
+/* Prompt user info */
+input:required {
+  border: 1px solid red;
+}
+
+.frmUserInfo {
+  max-width: 410px;
+  margin: 50px auto;
+  padding: 25px;
+  /*background-color: rgba(250,250,250,0.5);*/
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2),
+  inset 0px 1px 0px 0px rgba(250, 250, 250, 0.5);
+  border: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.frmUserInfo ul {
+  padding: 0;
+  margin: 0;
+}
+.frmUserInfo li {
+  display: inline;
+  float: left;
+}
+
+label {
+  display: block;
+  color: #999;
+}
+.cf:before,
+.cf:after {
+  content: "";
+  display: table;
+}
+
+.cf:after {
+  clear: both;
+}
+.cf {
+  *zoom: 1;
+}
+:focus {
+  outline: 0;
+}
+
+.frmUserInfo input:not([type=submit]) {
+  padding: 5px;
+  margin-right: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 3px;
+  box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.1),
+  0px 1px 0px 0px rgba(250, 250, 250, 0.5) ;
+}
+
+button[disabled=disabled] {
+  background: gray !important;
+  color: grey !important;
+}
+
+button.btn.btn-success {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  background: #64c8ef; /* Old browsers */
+  background: -moz-linear-gradient(top,  #64c8ef 0%, #00a2e2 100%); /* FF3.6+ */
+  background: -webkit-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  #64c8ef 0%,#00a2e2 100%); /* IE10+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#64c8ef', endColorstr='#00a2e2',GradientType=0 ); /* IE6-9 */
+  color: #fff;
+  padding: 5px 15px;
+  margin-right: 0;
+  margin-top: 15px;
+  border-radius: 3px;
+  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.3);
+}
+
