--- a/views/clientroom/layout.ejs
+++ b/views/clientroom/layout.ejs
@@ -13,25 +13,23 @@
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   <![endif]-->
-
+  <!-- CDN -->
   <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
+  <!--CLIENTROOM STYLES-->
   <link rel="stylesheet" href="/styles/common.css">
   <link rel="stylesheet" href="/styles/extra/animate.css">
-
-  <link rel="stylesheet" href="/css/dashboard/bootstrap.min.css">
-  <!--<link rel="stylesheet" href="/dashboard/plugins/morris/morris-0.4.3.min.css">-->
-  <link rel="stylesheet" href="/css/dashboard/dashboard.css">
-  <link rel="stylesheet" href="/css/dashboard/custom.css">
   <link rel="stylesheet" href="/css/clientroom/livingroom.css">
+  <link rel="stylesheet" href="/css/clientroom/fluidGrid.css">
   <link rel="stylesheet" href="/css/clientroom/chatbox.css">
+  <!--CLIENTROOM STYLES END-->
   <!-- This is needed because Facebook login redirects add #_=_ at the end of the URL-->
   <script type="text/javascript">
     if (window.location.href.indexOf('#_=_') > 0) {
       window.location = window.location.href.replace(/#.*/, '');
     }
   </script>
-  <base href="/clientroom/">
+  <base href="/">
 </head>
 
 <body class="mini-navbar">
