produce Product version & and minify js, css, ejs

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -39,13 +39,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
 
   <!--STYLES-->
-  <link rel="stylesheet" href="/vendor/bootstrap/bootstrap.css">
-  <link rel="stylesheet" href="/vendor/jquery-impromptu/jquery-impromptu.css">
-  <link rel="stylesheet" href="/styles/common.css">
-  <link rel="stylesheet" href="/styles/extra/animate.css">
-  <link rel="stylesheet" href="/styles/homepage.css">
-  <link rel="stylesheet" href="/styles/importer.css">
-  <link rel="stylesheet" href="/styles/responsive.css">
+  <link rel="stylesheet" href="/min/production.min.css">
   <!--STYLES END-->
 </head>
 
