--- a/views/clientroom/layout.ejs
+++ b/views/clientroom/layout.ejs
@@ -17,11 +17,7 @@
   <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css">
   <!--CLIENTROOM STYLES-->
-  <link rel="stylesheet" href="/styles/common.css">
-  <link rel="stylesheet" href="/styles/extra/animate.css">
-  <link rel="stylesheet" href="/css/clientroom/livingroom.css">
-  <link rel="stylesheet" href="/css/clientroom/fluidGrid.css">
-  <link rel="stylesheet" href="/css/clientroom/chatbox.css">
+  <link rel="stylesheet" href="/min/app.clientroom.min.css">
   <!--CLIENTROOM STYLES END-->
   <!-- This is needed because Facebook login redirects add #_=_ at the end of the URL-->
   <script type="text/javascript">
@@ -34,7 +30,6 @@
 
 <body class="mini-navbar">
 <%- body %>
-<!--<script src="/vendor/requirejs/require.js" data-main="/js/main"></script>-->
 
 </body>
 </html>
